# bigdecimal-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yaml
examples/: floating-precision.rs  repeated_squares.rs  simple-math.rs
src/: error.rs  lib.rs  macros.rs  serde_impl.rs
