[package]
name = "bigdecimal"
version = "0.4.0"
authors = ["Andrew Kubera"]
description = "Arbitrary precision decimal numbers"
homepage = "https://github.com/maintenance-group/bigdecimal-rs"
repository = "https://github.com/maintenance-group/bigdecimal-rs"
keywords = [
	"mathematics",
	"numerics",
	"decimal",
	"arbitrary-precision",
	"floating-point",
]
license = "MIT/Apache-2.0"

[dependencies]
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1"

[features]
string-only = []
